--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>1.2.0</version>
         </dependency>
 
+        <!-- OpenAI Java SDK for LLM Pipeline (extraction, scoring, embeddings) -->
+        <dependency>
+            <groupId>com.openai</groupId>
+            <artifactId>openai-java</artifactId>
+            <version>4.8.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
